feat: profile 설정 및 일부 기능 수정 등